--- a/frontend/src/screen/ShopScreen.module.css
+++ b/frontend/src/screen/ShopScreen.module.css
@@ -33,3 +33,15 @@
     padding: 10px;
     text-align: center;
 }
+
+.inventoryTitle {
+    margin: 20px;
+    text-align: center;
+    justify-content: center;
+    text-transform: capitalize;
+    background-color: #dddd49;
+    padding: 10px;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+    /* width: 50%; */
+}
