--- a/frontend/src/component/ShopHomeLayout.module.css
+++ b/frontend/src/component/ShopHomeLayout.module.css
@@ -27,10 +27,27 @@
     overflow: hidden;
   }
 
-  .shopLayout li a{
+.shopLayout li a{
     display: block;
     color: black;
     text-decoration: none;
     width: 100%;
     height: 100%;
   }
+
+
+.productLink a {
+  color: white;
+  background-color: #3c8ed1;
+  text-decoration: none;
+  padding: 5px;
+  box-shadow: 0 0 10px #7b9bb6;
+}
+
+.productLink a:hover{
+  background-color: #3c8ed1a6;
+}
+
+.productLink a:focus {
+  background-color: #3c8ed1;
+}
